Prevent card editor from overflowing when diff is too long
Image diffs, in particular, were causing problems since there were long strings with no spaces.

--- a/app/static/css/clo.css
+++ b/app/static/css/clo.css
@@ -66,7 +66,8 @@ body {
   border-radius: .25rem;
   padding: .5rem!important;
   margin-top: .5rem!important;
-  margin-left: .5rem!important;
+  margin-left: .25rem!important;
+  margin-right: .25rem!important;
 }
 
 .framed-inner {
@@ -75,12 +76,12 @@ body {
   border-color: var(--secondary);
   border-radius: .25rem;
   padding: .5rem!important;
-  margin-top: .5rem;
+  margin-top: .25rem;
 }
 
 .inner-frames {
-  padding-left: .5rem!important;
-  padding-right: 0;
+  padding-left: .25rem!important;
+  padding-right: .25rem!important;
   margin-right: 0;
 }
 
